Resolves: fdo#58187 Expand and Collapse should be virtual

regression from ac7acb0ab1329913b0cec79790adcde0263960be

Change-Id: I773871f08f43a8abadfc5ef9b641db722deb7d20